Console runner: Can change environment